--- a/index.ipynb
+++ b/index.ipynb
@@ -45,12 +45,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Animal(object):\n",
-    "    pass"
+    "    def __init__(self,name,weight):\n",
+    "        self.name = name\n",
+    "        self.size = None\n",
+    "        self.weight = weight\n",
+    "        self.species = None\n",
+    "        self.food_type =None#'herbivore', 'carnivore', or 'omnivore'\n",
+    "        self.nocturnal = None# True or False\n",
+    "    def sleep(self):\n",
+    "        if self.norturnal:\n",
+    "            print(\"{} sleeps during the day.\".format(self.name)) \n",
+    "        else:\n",
+    "            print(\"{} sleeps during the night.\".format(self.name)) \n",
+    "    def eat(self, food):\n",
+    "        if self.food_type == 'omnivore':\n",
+    "            print('{} the {} thinks {} is yummy!'.format(self.name,self.species, food)) \n",
+    "        elif (food == 'meat' and self.food_type == 'carnivore') or (food == 'plants' and self.food_type == 'herbivore'):\n",
+    "            print('{} the {} thinks {} is yummy!'.format(self.name,self.species, food))    \n",
+    "               \n",
+    "        else:\n",
+    "            print(\"I don't eat this!\")"
    ]
   },
   {
@@ -72,12 +91,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Elephant(Animal):\n",
-    "    pass"
+    "    def __init__(self,name,weight):\n",
+    "        super().__init__(name, weight)\n",
+    "        self.size = 'enormous'\n",
+    "        self.species ='elephant'\n",
+    "        self.food_type = 'herbivore'\n",
+    "        self.nocturnal = False\n",
+    "        \n",
+    "        "
    ]
   },
   {
@@ -95,12 +121,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Tiger(Animal):\n",
-    "    pass"
+    "    def __init__(self,name, weight):\n",
+    "        super().__init__(name,weight)\n",
+    "        self.size ='large'\n",
+    "        self.species = 'tiger'\n",
+    "        self.food_type = 'carnivore'\n",
+    "        self.nocturnal = True"
    ]
   },
   {
@@ -118,12 +149,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Raccoon(Animal):\n",
-    "    pass"
+    "    def __init__(self,name,weight):\n",
+    "        super().__init__(name,weight)\n",
+    "        self.size ='small'\n",
+    "        self.species ='raccoon'\n",
+    "        self.food_type = 'omnivore'\n",
+    "        self.nocturnal = True"
    ]
   },
   {
@@ -141,12 +177,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Gorilla(Animal):\n",
-    "    pass"
+    "    def __init__(self,name, weight):\n",
+    "        super().__init__(name,weight)\n",
+    "        self.size = 'large'\n",
+    "        self.species ='gorilla'\n",
+    "        self.food_type = 'herbivore'\n",
+    "        self.nocturnal = False"
    ]
   },
   {
@@ -174,12 +215,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
     "def add_animal_to_zoo(zoo, animal_type, name, weight):\n",
-    "    pass"
+    "    if animal_type == 'Gorilla':\n",
+    "        zoo.append(Gorilla(name,weight))\n",
+    "    elif animal_type == 'Raccoon':\n",
+    "        zoo.append(Raccoon(name,weight))\n",
+    "    elif animal_type == 'Tiger':\n",
+    "        zoo.append(Tiger(name,weight))\n",
+    "    else:\n",
+    "        zoo.append(Elephant(name, weight))\n",
+    "    return zoo\n",
+    "\n",
+    "    "
    ]
   },
   {
@@ -198,11 +249,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create your animals and add them to the 'zoo' in this cell!"
+    "# Create your animals and add them to the 'zoo' in this cell!\n",
+    "kinds =['Elephant', 'Elephant', 'Raccon','Raccon', 'Gorilla','Tiger','Tiger','Tiger']\n",
+    "\n",
+    "IndyZoo =[]\n",
+    "for i in kinds:\n",
+    "    add_animal_to_zoo(IndyZoo,i,'i',100 )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<__main__.Elephant at 0x1eb577654e0>,\n",
+       " <__main__.Elephant at 0x1eb57765fd0>,\n",
+       " <__main__.Elephant at 0x1eb577652e8>,\n",
+       " <__main__.Elephant at 0x1eb57765128>,\n",
+       " <__main__.Gorilla at 0x1eb57765ba8>,\n",
+       " <__main__.Tiger at 0x1eb57765b00>,\n",
+       " <__main__.Tiger at 0x1eb57765b70>,\n",
+       " <__main__.Tiger at 0x1eb577652b0>]"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "IndyZoo"
    ]
   },
   {
@@ -224,12 +307,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
     "def feed_animals(zoo, time='Day'):\n",
-    "    pass"
+    "    for animal in zoo:\n",
+    "        if time == 'Day':\n",
+    "            if animal.nocturnal == False:\n",
+    "                if animal.food_type == 'carnivore':\n",
+    "                    animal.eat('meat')\n",
+    "                else:\n",
+    "                    animal.eat('plants')\n",
+    "        else:\n",
+    "            if animal.nocturnal == True:\n",
+    "                if animal.food_type == 'carnivore':\n",
+    "                    animal.eat('meat')\n",
+    "                else:\n",
+    "                    animal.eat('plants')"
    ]
   },
   {
@@ -241,10 +336,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i the elephant thinks plants is yummy!\n",
+      "i the elephant thinks plants is yummy!\n",
+      "i the elephant thinks plants is yummy!\n",
+      "i the elephant thinks plants is yummy!\n",
+      "i the gorilla thinks plants is yummy!\n"
+     ]
+    }
+   ],
+   "source": [
+    "feed_animals(IndyZoo)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -257,10 +366,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i the tiger thinks meat is yummy!\n",
+      "i the tiger thinks meat is yummy!\n",
+      "i the tiger thinks meat is yummy!\n"
+     ]
+    }
+   ],
+   "source": [
+    "feed_animals(IndyZoo,time='Night')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -294,7 +415,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
